--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <li>Exp 1.a : <a href = "https://fsd2-8bu1.onrender.com/" target="_blank" >Basic Setup</a></li>
             <li>Exp 1.b : <a href = "https://fsd3.onrender.com/" target="_blank">HTTP Data Transfer</a></li>
             <li>Exp 1.c : <a href = "https://fsd4-2.onrender.com/" target="_blank">Custom MathUtil Module</a></li>
-            <li>Exp 1.d : <a href = "https://nodejs-exp1-1.onrender.com/" target="_blank">URL Parser</a></li>
+            <li>Exp 1.d : <a href = "https://fsd5.onrender.com/" target="_blank">URL Parser</a></li>
         </ul>
         
     </body> 
